--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,6 @@
   <groupId>org.redhatsummit</groupId>
   <artifactId>infinispan-test</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.5</version>
-    </dependency>
-  </dependencies>
 
   <properties>
     <!-- Explicitly declaring the source encoding eliminates the following
@@ -23,7 +16,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!-- Defines the main class to be execute when running java -jar
             command -->
-    <main.class.rest-endpoint>org.redhatsummit.infinispan.rest.MachineManager</main.class.rest-endpoint>
+    <main.class.rest-endpoint>org.redhatsummit.infinispan.domain.MachineManager</main.class.rest-endpoint>
 
     <!-- other plugin versions -->
     <exec.plugin.version>1.2.1</exec.plugin.version>
@@ -31,6 +24,31 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.infinispan</groupId>
+        <artifactId>infinispan-bom</artifactId>
+        <version>9.4.4.Final</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.infinispan</groupId>
+      <artifactId>infinispan-client-hotrod</artifactId>
+    </dependency>
+  </dependencies>
+
 
   <build>
     <finalName>${project.artifactId}</finalName>
