Add Hibernate OGM support and update README

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,22 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.hibernate.ogm</groupId>
+      <artifactId>hibernate-ogm-infinispan-remote</artifactId>
+      <version>5.4.0.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana.jta</groupId>
+      <artifactId>narayana-jta</artifactId>
+      <version>5.9.0.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.0.3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.5</version>
@@ -48,7 +64,6 @@
       <artifactId>infinispan-client-hotrod</artifactId>
     </dependency>
   </dependencies>
-
 
   <build>
     <finalName>${project.artifactId}</finalName>
