--- a/damagesource/src/main/resources/infinispan.properties
+++ b/damagesource/src/main/resources/infinispan.properties
@@ -1,2 +1,6 @@
 infinispan.host=localhost
 infinispan.hotrod.port=11222
+damage.events.per.second=1
+health.counter.name=health-counter
+health.counter.initial.value=1000
+health.counter.lower.bound=0
