--- a/damagesource/pom.xml
+++ b/damagesource/pom.xml
@@ -38,6 +38,12 @@
       <artifactId>narayana-jta</artifactId>
       <version>5.9.0.Final</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13-beta-2</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
